--- a/po/es_ES.po
+++ b/po/es_ES.po
@@ -587,9 +587,8 @@ msgstr "¡Falló la prueba de cuenta de correo!"
 msgid "Button$Test"
 msgstr "Probar"
 
-#, fuzzy
 msgid "$ abcdefghijklmnopqrstuvwxyz0123456789-.,#~\\^$[]|()*+?{}/:%@&_"
-msgstr " aábcçdeéfghiíjklmnñoópqrstuúüvwxyz0123456789-_.,#~\\^$[]|()*+?{}/:%@&"
+msgstr " aábcçdeéfghiíjklmnñoópqrstuúüvwxyz0123456789-_.,#~\\^$[]|()*+?{}/:%@&_"
 
 msgid "Start/Stop time has changed"
 msgstr "Ha cambiado el tiempo inicial/final"
