--- a/po/it_IT.po
+++ b/po/it_IT.po
@@ -9,7 +9,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: VDR 1.5.7\n"
 "Report-Msgid-Bugs-To: <cwieninger@gmx.de>\n"
-"POT-Creation-Date: 2011-09-19 19:17+0200\n"
+"POT-Creation-Date: 2012-02-05 12:40+0100\n"
 "PO-Revision-Date: 2011-07-17 17:46+0100\n"
 "Last-Translator: Diego Pierotto <vdr-italian@tiscali.it>\n"
 "Language-Team: Italian <vdr@linuxtv.org>\n"
@@ -534,7 +534,7 @@ msgstr "Imposta 'sì' se vuoi avere una notifica email sui timer in conflitto."
 msgid "Send to"
 msgstr "Invia a"
 
-msgid "Help$Specify the email adress where notifications should be sent to."
+msgid "Help$Specify the email address where notifications should be sent to."
 msgstr "Specifica l'indirizzo di posta al quale le notifiche dovrebbero essere spedite."
 
 msgid "Mail method"
@@ -554,10 +554,10 @@ msgstr ""
 msgid "--- Email account ---"
 msgstr "--- Account email ---"
 
-msgid "Email adress"
+msgid "Email address"
 msgstr "Indirizzo di posta"
 
-msgid "Help$Specify the email adress where notifications should be sent from."
+msgid "Help$Specify the email address where notifications should be sent from."
 msgstr "Specifica l'indirizzo di posta dal quale le notifiche dovrebbero essere spedite."
 
 msgid "SMTP server"
