--- a/po/sk_SK.po
+++ b/po/sk_SK.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: epgsearch\n"
 "Report-Msgid-Bugs-To: <cwieninger@gmx.de>\n"
-"POT-Creation-Date: 2011-09-19 19:17+0200\n"
+"POT-Creation-Date: 2012-02-05 12:40+0100\n"
 "PO-Revision-Date: 2009-11-02 09:40+0100\n"
 "Last-Translator: Milan Hrala <hrala.milan@gmail.com>\n"
 "Language-Team: Slovak <hrala.milan@gmail.com>\n"
@@ -532,7 +532,7 @@ msgstr "Nastavte áno ak potrebujete oznamovať konflikty plánu na mail"
 msgid "Send to"
 msgstr "Poslať no"
 
-msgid "Help$Specify the email adress where notifications should be sent to."
+msgid "Help$Specify the email address where notifications should be sent to."
 msgstr "Rozpíšte email adresu, na ktorú by sa mali posielať oznámenia."
 
 msgid "Mail method"
@@ -551,10 +551,10 @@ msgstr ""
 msgid "--- Email account ---"
 msgstr "--- Email účet ---"
 
-msgid "Email adress"
+msgid "Email address"
 msgstr "Email adresa"
 
-msgid "Help$Specify the email adress where notifications should be sent from."
+msgid "Help$Specify the email address where notifications should be sent from."
 msgstr "Zadajte mailovú adresu na ktorá sa budú posielať upozornenia."
 
 msgid "SMTP server"
