--- a/po/de_DE.po
+++ b/po/de_DE.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: VDR 1.5.7\n"
 "Report-Msgid-Bugs-To: <cwieninger@gmx.de>\n"
-"POT-Creation-Date: 2011-09-19 19:17+0200\n"
+"POT-Creation-Date: 2012-02-05 12:40+0100\n"
 "PO-Revision-Date: 2007-08-14 20:21+0200\n"
 "Last-Translator: Klaus Schmidinger <kls@cadsoft.de>\n"
 "Language-Team: German <vdr@linuxtv.org>\n"
@@ -529,7 +529,7 @@ msgstr "Hier mit 'Ja' auswählen, ob eine Email-Benachrichtigung über Timer-Kon
 msgid "Send to"
 msgstr "Senden an"
 
-msgid "Help$Specify the email adress where notifications should be sent to."
+msgid "Help$Specify the email address where notifications should be sent to."
 msgstr "Hier wird die Email-Adresse angegeben, an welche die Benachrichtigungen versandt werden."
 
 msgid "Mail method"
@@ -548,10 +548,10 @@ msgstr ""
 msgid "--- Email account ---"
 msgstr "--- Email-Konto ---"
 
-msgid "Email adress"
+msgid "Email address"
 msgstr "Email-Adresse"
 
-msgid "Help$Specify the email adress where notifications should be sent from."
+msgid "Help$Specify the email address where notifications should be sent from."
 msgstr "Hier wird die Email-Adresse angegeben, mit der die Benachrichtigungen versandt werden."
 
 msgid "SMTP server"
