--- a/po/fi_FI.po
+++ b/po/fi_FI.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: EPGSearch 0.9.25\n"
 "Report-Msgid-Bugs-To: <cwieninger@gmx.de>\n"
-"POT-Creation-Date: 2011-09-19 19:17+0200\n"
+"POT-Creation-Date: 2012-02-05 12:40+0100\n"
 "PO-Revision-Date: 2011-01-04 21:07+0200\n"
 "Last-Translator: Ville Skyttä <ville.skytta@iki.fi>\n"
 "Language-Team: Finnish <vdr@linuxtv.org>\n"
@@ -532,7 +532,7 @@ msgstr "Tällä asetuksella saat ilmoitukset päällekkäisistä ajastimista sä
 msgid "Send to"
 msgstr "Vastaanottaja"
 
-msgid "Help$Specify the email adress where notifications should be sent to."
+msgid "Help$Specify the email address where notifications should be sent to."
 msgstr "Määrittelee sähköpostiosoitteen, jonne ilmoitukset lähetetään."
 
 msgid "Mail method"
@@ -552,10 +552,10 @@ msgstr ""
 msgid "--- Email account ---"
 msgstr "--- Sähköposti ---"
 
-msgid "Email adress"
+msgid "Email address"
 msgstr "Sähköpostiosoite"
 
-msgid "Help$Specify the email adress where notifications should be sent from."
+msgid "Help$Specify the email address where notifications should be sent from."
 msgstr "Määrittelee sähköpostiosoitteen, josta ilmoitukset lähetetään."
 
 msgid "SMTP server"
