--- a/po/fr_FR.po
+++ b/po/fr_FR.po
@@ -10,7 +10,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: VDR 1.5.7\n"
 "Report-Msgid-Bugs-To: <cwieninger@gmx.de>\n"
-"POT-Creation-Date: 2011-09-19 19:17+0200\n"
+"POT-Creation-Date: 2012-02-05 12:40+0100\n"
 "PO-Revision-Date: 2008-04-30 08:36+0200\n"
 "Last-Translator: Patrice Staudt <patrice.staudt@laposte.net>\n"
 "Language-Team: French <vdr@linuxtv.org>\n"
@@ -535,7 +535,7 @@ msgstr "Mettez 'oui',si les conflits de programmation doivent être notifiés."
 msgid "Send to"
 msgstr "Envoyer à"
 
-msgid "Help$Specify the email adress where notifications should be sent to."
+msgid "Help$Specify the email address where notifications should be sent to."
 msgstr "Ici vous indiquez l'adresse mail, a laquelle les notifications sont envoyées."
 
 msgid "Mail method"
@@ -551,10 +551,10 @@ msgstr ""
 msgid "--- Email account ---"
 msgstr "--- Compte courriel ---"
 
-msgid "Email adress"
+msgid "Email address"
 msgstr "Adresse courriel"
 
-msgid "Help$Specify the email adress where notifications should be sent from."
+msgid "Help$Specify the email address where notifications should be sent from."
 msgstr "Préciser l'adresse courriel de l'envoyeur des notifications"
 
 msgid "SMTP server"
