--- a/po/lt_LT.po
+++ b/po/lt_LT.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: VDR 1.7.10\n"
 "Report-Msgid-Bugs-To: <cwieninger@gmx.de>\n"
-"POT-Creation-Date: 2011-09-19 19:17+0200\n"
+"POT-Creation-Date: 2012-02-05 12:40+0100\n"
 "PO-Revision-Date: 2007-08-14 20:21+0200\n"
 "Last-Translator: Valdemaras Pipiras <varas@ambernet.lt>\n"
 "Language-Team: Lithuanian <vdr@linuxtv.org>\n"
@@ -537,7 +537,7 @@ msgstr "Nustatyti 'taip' jei norite gauti pranešimus el. paštu apie laikmačio
 msgid "Send to"
 msgstr "Siūsti"
 
-msgid "Help$Specify the email adress where notifications should be sent to."
+msgid "Help$Specify the email address where notifications should be sent to."
 msgstr "Nurodykite el. pašto adresą kuriuo turėtų būti siunčiami perspėjimai."
 
 msgid "Mail method"
@@ -556,10 +556,10 @@ msgstr ""
 msgid "--- Email account ---"
 msgstr "--- El. pašto sąskaita ---"
 
-msgid "Email adress"
+msgid "Email address"
 msgstr "El. pašto adresas"
 
-msgid "Help$Specify the email adress where notifications should be sent from."
+msgid "Help$Specify the email address where notifications should be sent from."
 msgstr "Nurodyti el. pašto adresą iš kurio turėtų būti siunčiami pranešimai."
 
 msgid "SMTP server"
