--- a/po/nl_NL.po
+++ b/po/nl_NL.po
@@ -9,7 +9,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: VDR 1.5.7\n"
 "Report-Msgid-Bugs-To: <cwieninger@gmx.de>\n"
-"POT-Creation-Date: 2011-09-19 19:17+0200\n"
+"POT-Creation-Date: 2012-02-05 12:40+0100\n"
 "PO-Revision-Date: 2007-08-14 20:21+0200\n"
 "Last-Translator: Maarten Wisse <Maarten.Wisse@urz.uni-hd.de>\n"
 "Language-Team: Dutch <vdr@linuxtv.org>\n"
@@ -533,7 +533,7 @@ msgstr "Kies 'ja' indien er een notificatie e-mail verstuurd moet worden bij tim
 msgid "Send to"
 msgstr "Zend naar"
 
-msgid "Help$Specify the email adress where notifications should be sent to."
+msgid "Help$Specify the email address where notifications should be sent to."
 msgstr "Geef het e-mail adres op waar de notificaties naartoe gestuurd moeen worden"
 
 msgid "Mail method"
@@ -549,10 +549,10 @@ msgstr ""
 msgid "--- Email account ---"
 msgstr "--- E-mail gebruiker ---"
 
-msgid "Email adress"
+msgid "Email address"
 msgstr "E-mail adres"
 
-msgid "Help$Specify the email adress where notifications should be sent from."
+msgid "Help$Specify the email address where notifications should be sent from."
 msgstr "Geef het e-mail adres op waar vandaan de e-mail notificaties verzonden worden"
 
 msgid "SMTP server"
