--- a/po/pt_PT.po
+++ b/po/pt_PT.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: VDR 1.5.7\n"
 "Report-Msgid-Bugs-To: <cwieninger@gmx.de>\n"
-"POT-Creation-Date: 2011-09-19 19:17+0200\n"
+"POT-Creation-Date: 2012-02-05 12:40+0100\n"
 "PO-Revision-Date: 2007-08-14 20:21+0200\n"
 "Last-Translator: Paulo Lopes <pmml@netvita.pt>\n"
 "Language-Team: Portuguese <vdr@linuxtv.org>\n"
@@ -493,7 +493,7 @@ msgstr ""
 msgid "Send to"
 msgstr ""
 
-msgid "Help$Specify the email adress where notifications should be sent to."
+msgid "Help$Specify the email address where notifications should be sent to."
 msgstr ""
 
 msgid "Mail method"
@@ -509,10 +509,10 @@ msgstr ""
 msgid "--- Email account ---"
 msgstr ""
 
-msgid "Email adress"
+msgid "Email address"
 msgstr ""
 
-msgid "Help$Specify the email adress where notifications should be sent from."
+msgid "Help$Specify the email address where notifications should be sent from."
 msgstr ""
 
 msgid "SMTP server"
