--- a/HISTORY.DE
+++ b/HISTORY.DE
@@ -3,8 +3,8 @@ VDR Plugin 'epgsearch' Revision History
 
 2011-xx-xx: Version 1.0.1
 neu:
-- Wenn Kanalseparatoren angezeigt werden, kann das in der Ausgabe von graphtft Probleme 
-  machen. Um das zu  vermeiden, bitte PLUGIN_EPGSEARCH_SEPP_ITEMS=--- in der Make.config
+- Wenn Kanalseparatoren angezeigt werden, kann das in der Ausgabe von graphlcd Probleme 
+  machen. Um das zu  vermeiden, bitte PLUGIN_EPGSEARCH_SEP_ITEMS=--- in der Make.config
   setzen. Die meisten Skins (ausser classic, st:tng) ersetzen '---' ohnehin in eine durch-
   gehende Linie.
   (Feature #857, Danke an 'KeineAhnung' für den Patch)
