--- a/po/de_DE.po
+++ b/po/de_DE.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: VDR 1.5.7\n"
 "Report-Msgid-Bugs-To: <cwieninger@gmx.de>\n"
-"POT-Creation-Date: 2012-02-05 12:40+0100\n"
+"POT-Creation-Date: 2012-03-15 19:51+0100\n"
 "PO-Revision-Date: 2007-08-14 20:21+0200\n"
 "Last-Translator: Klaus Schmidinger <kls@cadsoft.de>\n"
 "Language-Team: German <vdr@linuxtv.org>\n"
@@ -866,6 +866,9 @@ msgstr "Verw. Ausschlusslisten"
 
 msgid "Edit$Search text too short - use anyway?"
 msgstr "Suchtext zu kurz - trotzdem verwenden?"
+
+msgid "Button$Orphaned"
+msgstr "Verwaiste"
 
 msgid "Button$by name"
 msgstr "nach Name"
