--- a/po/fi_FI.po
+++ b/po/fi_FI.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: EPGSearch 0.9.25\n"
 "Report-Msgid-Bugs-To: <cwieninger@gmx.de>\n"
-"POT-Creation-Date: 2012-02-05 12:40+0100\n"
+"POT-Creation-Date: 2012-03-15 19:51+0100\n"
 "PO-Revision-Date: 2011-01-04 21:07+0200\n"
 "Last-Translator: Ville Skyttä <ville.skytta@iki.fi>\n"
 "Language-Team: Finnish <vdr@linuxtv.org>\n"
@@ -870,6 +870,10 @@ msgstr "Käytä mustia listoja"
 
 msgid "Edit$Search text too short - use anyway?"
 msgstr "Liian suppea hakuehto - etsitäänkö silti?"
+
+#, fuzzy
+msgid "Button$Orphaned"
+msgstr "Kanavat"
 
 msgid "Button$by name"
 msgstr "Nimi"
