--- a/po/nl_NL.po
+++ b/po/nl_NL.po
@@ -9,7 +9,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: VDR 1.5.7\n"
 "Report-Msgid-Bugs-To: <cwieninger@gmx.de>\n"
-"POT-Creation-Date: 2012-02-05 12:40+0100\n"
+"POT-Creation-Date: 2012-03-15 19:51+0100\n"
 "PO-Revision-Date: 2007-08-14 20:21+0200\n"
 "Last-Translator: Maarten Wisse <Maarten.Wisse@urz.uni-hd.de>\n"
 "Language-Team: Dutch <vdr@linuxtv.org>\n"
@@ -868,6 +868,10 @@ msgstr "Gebruik blacklists"
 
 msgid "Edit$Search text too short - use anyway?"
 msgstr "Zoektekst te kort - toch gebruiken?"
+
+#, fuzzy
+msgid "Button$Orphaned"
+msgstr "per kanaal"
 
 msgid "Button$by name"
 msgstr "op naam"
