--- a/po/sk_SK.po
+++ b/po/sk_SK.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: epgsearch\n"
 "Report-Msgid-Bugs-To: <cwieninger@gmx.de>\n"
-"POT-Creation-Date: 2012-02-05 12:40+0100\n"
+"POT-Creation-Date: 2012-03-15 19:51+0100\n"
 "PO-Revision-Date: 2009-11-02 09:40+0100\n"
 "Last-Translator: Milan Hrala <hrala.milan@gmail.com>\n"
 "Language-Team: Slovak <hrala.milan@gmail.com>\n"
@@ -869,6 +869,10 @@ msgstr "Použiť čiernu listinu"
 
 msgid "Edit$Search text too short - use anyway?"
 msgstr "Hľadaný text je krátky - použiť aj tak?"
+
+#, fuzzy
+msgid "Button$Orphaned"
+msgstr "podľa kanálu"
 
 msgid "Button$by name"
 msgstr "podľa mena"
