--- a/HISTORY
+++ b/HISTORY
@@ -1,7 +1,7 @@
 VDR Plugin 'epgsearch' Revision History
 ---------------------------------------
 
-2011-xx-xx; Version 1.0.1
+2012-05-xx; Version 1.0.1
 new:
 - in the menu 'recordings done' you can now toggle the blue key to 'Orphaned' to show
   recordings with vanished search timers.
