--- a/po/cs_CZ.po
+++ b/po/cs_CZ.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: VDR 1.7.21\n"
 "Report-Msgid-Bugs-To: <cwieninger@gmx.de>\n"
-"POT-Creation-Date: 2012-03-15 19:51+0100\n"
+"POT-Creation-Date: 2012-10-31 19:32+0100\n"
 "PO-Revision-Date: 2011-10-31 20:21+0200\n"
 "Last-Translator: Radek Stastny <dedkus@gmail.com>\n"
 "Language-Team: Czech <vdr@linuxtv.org>\n"
@@ -60,6 +60,10 @@ msgstr "Konflikty do hlavního menu"
 
 msgid "next"
 msgstr "další"
+
+#, fuzzy, c-format
+msgid "timer conflict at %s! Show it?"
+msgstr "Konflikt Nahrávání! Zobrazit?"
 
 #, c-format
 msgid "%d timer conflict(s)! First at %s. Show them?"
