--- a/po/de_DE.po
+++ b/po/de_DE.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: VDR 1.5.7\n"
 "Report-Msgid-Bugs-To: <cwieninger@gmx.de>\n"
-"POT-Creation-Date: 2012-03-15 19:51+0100\n"
+"POT-Creation-Date: 2012-10-31 19:32+0100\n"
 "PO-Revision-Date: 2007-08-14 20:21+0200\n"
 "Last-Translator: Klaus Schmidinger <kls@cadsoft.de>\n"
 "Language-Team: German <vdr@linuxtv.org>\n"
@@ -60,6 +60,10 @@ msgstr "Konflikt-Info im Hauptmenü"
 
 msgid "next"
 msgstr "nächster"
+
+#, c-format
+msgid "timer conflict at %s! Show it?"
+msgstr "Timer-Konflikt am %s! Anzeigen?"
 
 #, c-format
 msgid "%d timer conflict(s)! First at %s. Show them?"
