--- a/po/es_ES.po
+++ b/po/es_ES.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: VDR 1.5.7\n"
 "Report-Msgid-Bugs-To: <cwieninger@gmx.de>\n"
-"POT-Creation-Date: 2012-03-15 19:51+0100\n"
+"POT-Creation-Date: 2012-10-31 19:32+0100\n"
 "PO-Revision-Date: 2007-11-18 20:09+0200\n"
 "Last-Translator: bittor from open7x0.org <bittor7x0 _at_ gmail.com>\n"
 "Language-Team: Spanish <vdr@linuxtv.org>\n"
@@ -60,6 +60,10 @@ msgstr "Mostrar conflictos en menú principal"
 
 msgid "next"
 msgstr "siguiente"
+
+#, fuzzy, c-format
+msgid "timer conflict at %s! Show it?"
+msgstr "¿Mostrar conflicto de programación?"
 
 #, c-format
 msgid "%d timer conflict(s)! First at %s. Show them?"
