--- a/po/fi_FI.po
+++ b/po/fi_FI.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: EPGSearch 0.9.25\n"
 "Report-Msgid-Bugs-To: <cwieninger@gmx.de>\n"
-"POT-Creation-Date: 2012-03-15 19:51+0100\n"
+"POT-Creation-Date: 2012-10-31 19:32+0100\n"
 "PO-Revision-Date: 2011-01-04 21:07+0200\n"
 "Last-Translator: Ville Skyttä <ville.skytta@iki.fi>\n"
 "Language-Team: Finnish <vdr@linuxtv.org>\n"
@@ -63,6 +63,10 @@ msgstr "Näytä päällekkäisyydet päävalikossa"
 
 msgid "next"
 msgstr "seuraava"
+
+#, fuzzy, c-format
+msgid "timer conflict at %s! Show it?"
+msgstr "Päällekkäisiä ajastimia! Näytetäänkö?"
 
 #, c-format
 msgid "%d timer conflict(s)! First at %s. Show them?"
