--- a/po/fr_FR.po
+++ b/po/fr_FR.po
@@ -10,7 +10,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: VDR 1.5.7\n"
 "Report-Msgid-Bugs-To: <cwieninger@gmx.de>\n"
-"POT-Creation-Date: 2012-03-15 19:51+0100\n"
+"POT-Creation-Date: 2012-10-31 19:32+0100\n"
 "PO-Revision-Date: 2008-04-30 08:36+0200\n"
 "Last-Translator: Patrice Staudt <patrice.staudt@laposte.net>\n"
 "Language-Team: French <vdr@linuxtv.org>\n"
@@ -63,6 +63,10 @@ msgstr "Conflits infos dans le menu principale"
 
 msgid "next"
 msgstr "prochain"
+
+#, fuzzy, c-format
+msgid "timer conflict at %s! Show it?"
+msgstr "Afficher les conflits de programmation?"
 
 #, c-format
 msgid "%d timer conflict(s)! First at %s. Show them?"
