--- a/po/it_IT.po
+++ b/po/it_IT.po
@@ -9,7 +9,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: VDR 1.5.7\n"
 "Report-Msgid-Bugs-To: <cwieninger@gmx.de>\n"
-"POT-Creation-Date: 2012-03-15 19:51+0100\n"
+"POT-Creation-Date: 2012-10-31 19:32+0100\n"
 "PO-Revision-Date: 2011-07-17 17:46+0100\n"
 "Last-Translator: Diego Pierotto <vdr-italian@tiscali.it>\n"
 "Language-Team: Italian <vdr@linuxtv.org>\n"
@@ -65,6 +65,10 @@ msgstr "Informazioni conflitto nel menu principale"
 
 msgid "next"
 msgstr "prossimo"
+
+#, fuzzy, c-format
+msgid "timer conflict at %s! Show it?"
+msgstr "Conflitto timer! Mostrare?"
 
 #, c-format
 msgid "%d timer conflict(s)! First at %s. Show them?"
