--- a/po/lt_LT.po
+++ b/po/lt_LT.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: VDR 1.7.10\n"
 "Report-Msgid-Bugs-To: <cwieninger@gmx.de>\n"
-"POT-Creation-Date: 2012-03-15 19:51+0100\n"
+"POT-Creation-Date: 2012-10-31 19:32+0100\n"
 "PO-Revision-Date: 2007-08-14 20:21+0200\n"
 "Last-Translator: Valdemaras Pipiras <varas@ambernet.lt>\n"
 "Language-Team: Lithuanian <vdr@linuxtv.org>\n"
@@ -60,6 +60,10 @@ msgstr "KOnflikto informacija pagrindiniame meniu"
 
 msgid "next"
 msgstr "sekantis"
+
+#, fuzzy, c-format
+msgid "timer conflict at %s! Show it?"
+msgstr "Laikmačio konflikas! Rodyti?"
 
 #, c-format
 msgid "%d timer conflict(s)! First at %s. Show them?"
