translation fixes - changed "conflict(s)" in "conflicts"

--- a/po/de_DE.po
+++ b/po/de_DE.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: VDR 1.5.7\n"
 "Report-Msgid-Bugs-To: <cwieninger@gmx.de>\n"
-"POT-Creation-Date: 2012-10-31 19:32+0100\n"
+"POT-Creation-Date: 2012-11-11 20:16+0100\n"
 "PO-Revision-Date: 2007-08-14 20:21+0200\n"
 "Last-Translator: Klaus Schmidinger <kls@cadsoft.de>\n"
 "Language-Team: German <vdr@linuxtv.org>\n"
@@ -66,8 +66,8 @@ msgid "timer conflict at %s! Show it?"
 msgstr "Timer-Konflikt am %s! Anzeigen?"
 
 #, c-format
-msgid "%d timer conflict(s)! First at %s. Show them?"
-msgstr "%d Timer-Konflikt(e)! Erster am %s. Anzeigen?"
+msgid "%d timer conflicts! First at %s. Show them?"
+msgstr "%d Timer-Konflikte! Erster am %s. Anzeigen?"
 
 msgid "search the EPG for repeats and more"
 msgstr "Suche im EPG nach Wiederholungen und anderem"
