--- a/po/es_ES.po
+++ b/po/es_ES.po
@@ -63,7 +63,7 @@ msgstr "siguiente"
 
 #, c-format
 msgid "timer conflict at %s! Show it?"
-msgstr "¿Mostrar conflicto de programación?"
+msgstr "¿Mostrar conflicto de programación a las %s?"
 
 #, c-format
 msgid "%d timer conflicts! First at %s. Show them?"
