--- a/po/fi_FI.po
+++ b/po/fi_FI.po
@@ -66,7 +66,7 @@ msgstr "seuraava"
 
 #, c-format
 msgid "timer conflict at %s! Show it?"
-msgstr "Päällekkäisiä ajastimia! Näytetäänkö?"
+msgstr "Päällekkäisiä ajastimia kpl %s! Näytetäänkö?"
 
 #, c-format
 msgid "%d timer conflicts! First at %s. Show them?"
