--- a/po/pt_PT.po
+++ b/po/pt_PT.po
@@ -288,8 +288,8 @@ msgid "Use VDR's timer edit menu"
 msgstr ""
 
 msgid ""
-"Help$This plugin has it's own timer edit menu extending the original one with some extra functionality like\n"
-"- an addtional directory entry\n"
+"Help$This plugin has its own timer edit menu extending the original one with some extra functionality like\n"
+"- an additional directory entry\n"
 "- user-defined days of week for repeating timers\n"
 "- adding an episode name\n"
 "- support for EPG variables (see MANUAL)"
