--- a/INSTALL.DE
+++ b/INSTALL.DE
@@ -2,8 +2,8 @@ Hier gibt es nichts besonderes. Bitte wie jedes andere Standard-Plugin
 installieren (entpacken, soft link, make plugins). Eine kleine
 Besonderheit: Wer lieber mit Perl compatible regular expressions in
 der Suche arbeitet, sollte einfach im Makefile des Plugins
-'#REGEXLIB = pcre' in 'REGEXLIB = pcre' ‰ndern oder einfach
-REGEXLIB=pcre an den 'make plugins'-Aufruf anh‰ngen. Hierzu muss pcreposix
+'#REGEXLIB = pcre' in 'REGEXLIB = pcre' √§ndern oder einfach
+REGEXLIB=pcre an den 'make plugins'-Aufruf anh√§ngen. Hierzu muss pcreposix
 installiert sein, das in der libpcre von www.pcre.org enthalten ist.
 Dies sollte aber in den meisten Distributionen bereits enthalten sein.
 
@@ -16,7 +16,7 @@ dann bitte libpcre von www.pcre.org updaten und das Plugin neu
 kompilieren.
 
 Scheinbar gibt es auf manchen Systemen Probleme mit PCRE, die sich in einem
-Crash ‰uﬂern, wenn man reg. Ausdr¸cke benutzt. Da ich die Ursache bisher
+Crash √§u√üern, wenn man reg. Ausdr√ºcke benutzt. Da ich die Ursache bisher
 nicht
 finden konnte, empfehle ich deshalb auf REGEXLIB=pcre zu verzichten, wenn
 es nicht unbedingt notwendig ist.
