--- a/po/de_DE.po
+++ b/po/de_DE.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: VDR 1.5.7\n"
 "Report-Msgid-Bugs-To: <see README>\n"
-"POT-Creation-Date: 2013-03-05 20:24+0100\n"
+"POT-Creation-Date: 2015-01-10 16:38+0100\n"
 "PO-Revision-Date: 2007-08-14 20:21+0200\n"
 "Last-Translator: Klaus Schmidinger <kls@cadsoft.de>\n"
 "Language-Team: German <vdr@linuxtv.org>\n"
@@ -990,6 +990,9 @@ msgstr "Ankündigen und Umschalten"
 
 msgid "Announce by mail"
 msgstr "per Mail ankündigen"
+
+msgid "Inactive record"
+msgstr "inaktive Aufnahme"
 
 msgid "only globals"
 msgstr "nur globale"
