--- a/HISTORY.DE
+++ b/HISTORY.DE
@@ -1,6 +1,15 @@
 VDR Plugin 'epgsearch' Revision History
 ---------------------------------------
 
+2017-05-xx; Version 2.2.x
+neu:
+- Anwenden menu_category_recsdone.diff von tomas & louis @vdr-portal.de
+  http://www.vdr-portal.de/board1-news/board2-vdr-news/p1271995-skindesigner-1-0-0-neuer-default-skin-estuary4vdr/#post1271995
+
+2017-05-01; Version 2.2.0 - stable version
+new:
+- 1.0.1.beta5 wird mit den Änderungen bis zum 2015-07-15 stable version
+
 2013-03-xx: Version 1.0.1 - Maintenance Release
 neu:
 - neuer Stil für das Makefile wie in vdr-1.7.36 eingeführt. Das alte Makefile gibt es noch
