--- a/HISTORY.DE
+++ b/HISTORY.DE
@@ -18,6 +18,7 @@ neu:
 - Anwenden menu_category_recsdone.diff von tomas & louis @vdr-portal.de
   http://www.vdr-portal.de/board1-news/board2-vdr-news/p1271995-skindesigner-1-0-0-neuer-default-skin-estuary4vdr/#post1271995
 - Anwenden 0001-revert-seperate-status-thread.diff von TomJoad@vdr-portal.de
+- Anwenden 0002-fix-incorrect-lock-sequences.diff von TomJoad@vdr-portal.de
   http://www.vdr-portal.de/board17-developer/board21-vdr-plugins/p1291452-epgsearch-f%C3%BCr-vdr-2-3-x/#post1291452
 
 2013-03-xx: Version 1.0.1 - Maintenance Release
