--- a/HISTORY.DE
+++ b/HISTORY.DE
@@ -20,6 +20,7 @@ neu:
 - Anwenden 0001-revert-seperate-status-thread.diff von TomJoad@vdr-portal.de
 - Anwenden 0002-fix-incorrect-lock-sequences.diff von TomJoad@vdr-portal.de
 - Anwenden 0003-revert-now-obsolete-pointer-params.diff von TomJoad@vdr-portal.de
+- Anwenden 0004-some-small-fixes.diff von TomJoad@vdr-portal.de
   http://www.vdr-portal.de/board17-developer/board21-vdr-plugins/p1291452-epgsearch-f%C3%BCr-vdr-2-3-x/#post1291452
 
 2013-03-xx: Version 1.0.1 - Maintenance Release
