--- a/po/da_DK.po
+++ b/po/da_DK.po
@@ -827,10 +827,7 @@ msgstr ""
 msgid "Button$Without subtitle"
 msgstr ""
 
-msgid "Epgsearch: Recursive LOCK DeleteTimer failed"
-msgstr ""
-
-msgid "Epgsearch: recursive TIMERS LOCK"
+msgid "Timer has been deleted"
 msgstr ""
 
 msgid "Button$Extended"
