--- a/po/es_ES.po
+++ b/po/es_ES.po
@@ -868,10 +868,7 @@ msgstr "Con subtítulo"
 msgid "Button$Without subtitle"
 msgstr "Sin subtítulo"
 
-msgid "Epgsearch: Recursive LOCK DeleteTimer failed"
-msgstr ""
-
-msgid "Epgsearch: recursive TIMERS LOCK"
+msgid "Timer has been deleted"
 msgstr ""
 
 msgid "Button$Extended"
