--- a/po/sl_SI.po
+++ b/po/sl_SI.po
@@ -741,6 +741,9 @@ msgstr ""
 msgid "EPG Commands"
 msgstr ""
 
+msgid "Epgsearch: RemoteTimerModifications failed"
+msgstr ""
+
 msgid "Already running!"
 msgstr ""
 
@@ -810,6 +813,9 @@ msgstr ""
 msgid "Childlock"
 msgstr ""
 
+msgid "Record on"
+msgstr ""
+
 msgid "Timer check"
 msgstr ""
 
@@ -822,13 +828,7 @@ msgstr ""
 msgid "Button$Without subtitle"
 msgstr ""
 
-msgid "Epgsearch: Recursive LOCK DeleteTimer failed"
-msgstr ""
-
-msgid "Epgsearch: recursive TIMERS LOCK"
-msgstr ""
-
-msgid "Epgsearch: RemoteTimerModifications failed"
+msgid "Timer has been deleted"
 msgstr ""
 
 msgid "Button$Extended"
