--- a/po/ca_ES.po
+++ b/po/ca_ES.po
@@ -829,10 +829,7 @@ msgstr ""
 msgid "Button$Without subtitle"
 msgstr ""
 
-msgid "Epgsearch: Recursive LOCK DeleteTimer failed"
-msgstr ""
-
-msgid "Epgsearch: recursive TIMERS LOCK"
+msgid "Timer has been deleted"
 msgstr ""
 
 msgid "Button$Extended"
