--- a/po/fr_FR.po
+++ b/po/fr_FR.po
@@ -10,7 +10,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: VDR 1.5.7\n"
 "Report-Msgid-Bugs-To: <see README>\n"
-"POT-Creation-Date: 2021-01-25 18:04+0100\n"
+"POT-Creation-Date: 2021-04-12 14:45+0200\n"
 "PO-Revision-Date: 2008-04-30 08:36+0200\n"
 "Last-Translator: Patrice Staudt <patrice.staudt@laposte.net>\n"
 "Language-Team: French <vdr@linuxtv.org>\n"
@@ -1037,7 +1037,7 @@ msgstr "compter enregistrements"
 msgid "count days"
 msgstr "compter jours"
 
-msgid "if present"
+msgid "allow empty"
 msgstr ""
 
 #, fuzzy
