--- a/po/nl_NL.po
+++ b/po/nl_NL.po
@@ -9,7 +9,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: VDR 1.5.7\n"
 "Report-Msgid-Bugs-To: <see README>\n"
-"POT-Creation-Date: 2021-01-25 18:04+0100\n"
+"POT-Creation-Date: 2021-04-12 14:45+0200\n"
 "PO-Revision-Date: 2007-08-14 20:21+0200\n"
 "Last-Translator: Maarten Wisse <Maarten.Wisse@urz.uni-hd.de>\n"
 "Language-Team: Dutch <vdr@linuxtv.org>\n"
@@ -1036,7 +1036,7 @@ msgstr "tel opnames"
 msgid "count days"
 msgstr "tel dagen"
 
-msgid "if present"
+msgid "allow empty"
 msgstr ""
 
 #, fuzzy
