--- a/po/sk_SK.po
+++ b/po/sk_SK.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: epgsearch\n"
 "Report-Msgid-Bugs-To: <see README>\n"
-"POT-Creation-Date: 2021-01-25 18:04+0100\n"
+"POT-Creation-Date: 2021-04-12 14:45+0200\n"
 "PO-Revision-Date: 2009-11-02 09:40+0100\n"
 "Last-Translator: Milan Hrala <hrala.milan@gmail.com>\n"
 "Language-Team: Slovak <hrala.milan@gmail.com>\n"
@@ -1037,7 +1037,7 @@ msgstr "Počet nahrávok"
 msgid "count days"
 msgstr "Počet dní"
 
-msgid "if present"
+msgid "allow empty"
 msgstr ""
 
 #, fuzzy
