--- a/po/tr_TR.po
+++ b/po/tr_TR.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: VDR 1.5.7\n"
 "Report-Msgid-Bugs-To: <see README>\n"
-"POT-Creation-Date: 2021-01-25 18:04+0100\n"
+"POT-Creation-Date: 2021-04-12 14:45+0200\n"
 "PO-Revision-Date: 2007-08-14 20:21+0200\n"
 "Last-Translator: Oktay Yolgeçen <oktay_73@yahoo.de>\n"
 "Language-Team: Turkish <vdr@linuxtv.org>\n"
@@ -991,7 +991,7 @@ msgstr ""
 msgid "count days"
 msgstr ""
 
-msgid "if present"
+msgid "allow empty"
 msgstr ""
 
 msgid "same day"
