--- a/po/nl_NL.po
+++ b/po/nl_NL.po
@@ -395,6 +395,12 @@ msgstr "Bepaal hier de standaard start opname-marge van timers/opnames aangemaak
 msgid "Help$Specify here the default stop recording margin of timers/recordings created with this plugin. This value can also be adjusted for each search itself."
 msgstr "Bepaal hier de standaard stop opname-marge van timers/opnames aangemaakt door deze plugin. Deze waarde kan ook worden aangepast voor iedere afzonderlijke zoekactie"
 
+msgid "AllowedErrors"
+msgstr ""
+
+msgid "Specify here the allowed reception errors before a recording is marked incomplete"
+msgstr ""
+
 msgid "No announcements when replaying"
 msgstr "Geen meldingen tijdens afspelen"
 
